@@ -1,1 +1,1 @@
-Xgui4 OS - Exp. caelestia-shell (Better Theming) - February 1.
+Xgui4 OS - Artix patches - February 2.
