@@ -18,3 +18,8 @@ export PATH="$HOME/gems/bin:$PATH"
 export PATH="$PATH:/usr/local/bin/"
 export PATH="$HOME/.local/share/gem/ruby/3.0.0/bin:$PATH"
 export PATH="$HOME/.local/bin:$PATH"
+
+if [ -z "$XDG_RUNTIME_DIR" ]; then
+    export XDG_RUNTIME_DIR="/tmp/$(id -u)-runtime"
+    mkdir -pm 700 "$XDG_RUNTIME_DIR"
+fi
