@@ -26,6 +26,11 @@
             "keyColor": "magenta"
         },
         {
+            "type": "initsystem",
+            "key": " init system:",
+            "keyColor": "magenta"
+        },
+        {
             "type": "kernel",
             "key": " Kernel:",
             "keyColor": "blue"
@@ -51,7 +56,7 @@
             "keyColor": "38;2;252;148;3"
         },
         {
-            "type": "Theme",
+            "type": "theme",
             "key": " Theme:",
             "keyColor": "38;2;252;148;3"
         },
@@ -62,7 +67,7 @@
             "keyColor": "38;2;252;148;3"
         },
         {
-            "type": "wmTheme",
+            "type": "wmtheme",
             "key": " Window Manager Theme:",
             "keyColor": "38;2;252;148;3"
         },
