@@ -7,7 +7,7 @@
 ### MONITORS ###
 ################
 
-source = ~/.config/hypr/monitors.conf
+source = ~/.dotfiles/hyprland/.config/hypr/monitors.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -74,4 +74,4 @@ xwayland:force_zero_scaling = true
 ## Plugins config ##
 ####################
 
-source = ~/.config/hypr/plugins.conf
+# source = ~/.config/hypr/plugins.conf
