@@ -1,107 +1,0 @@
-(
-    version: 3,
-    windows: (
-        scale: 8.5,
-        items_per_row: 5,
-        overview: (
-            launcher: (
-                default_terminal: "kitty",
-                launch_modifier: "ctrl",
-                width: 650,
-                max_items: 5,
-                show_when_empty: true,
-                plugins: (
-                    applications: (
-                        run_cache_weeks: 8,
-                        show_execs: true,
-                        show_actions_submenu: true,
-                    ),
-                    terminal: (),
-                    shell: (),
-                    websearch: (
-                        engines: [
-                            (
-                                url: "https://www.google.com/search?q={}",
-                                name: "Google",
-                                key: 'g',
-                            ),
-                            (
-                                url: "https://www.startpage.com/sp/search?query={}",
-                                name: "Startpage",
-                                key: 's',
-                            ),
-                            (
-                                url: "https://duckduckgo.com/?q={}",
-                                name: "DuckDuckGo",
-                                key: 'd',
-                            ),
-                            (
-                                url: "https://www.bing.com/search?q={}",
-                                name: "Bing",
-                                key: 'b',
-                            ),
-                            (
-                                url: "https://en.wikipedia.org/wiki/Special:Search?search={}",
-                                name: "Wikipedia",
-                                key: 'w',
-                            ),
-                            (
-                                url: "https://chatgpt.com/?q={}",
-                                name: "ChatGpt",
-                                key: 'c',
-                            ),
-                            (
-                                url: "https://www.youtube.com/results?search_query={}",
-                                name: "YouTube",
-                                key: 'y',
-                            ),
-                            (
-                                url: "https://www.reddit.com/search?q={}",
-                                name: "Reddit",
-                                key: 'r',
-                            ),
-                        ],
-                    ),
-                    calc: (),
-                    path: (),
-                    actions: (
-                        actions: [
-                            lock_screen,
-                            hibernate,
-                            logout,
-                            reboot,
-                            shutdown,
-                            suspend,
-                            custom(
-                                names: [
-                                    "Kill",
-                                    "Stop",
-                                ],
-                                details: "Kill or stop a process by name",
-                                command: "pkill \"{}\" && notify-send hyprshell \"stopped {}\"",
-                                icon: "remove",
-                            ),
-                            custom(
-                                names: [
-                                    "Reload Hyprshell",
-                                ],
-                                details: "Reload Hyprshell",
-                                command: "sleep 1; hyprshell socat \'\"Restart\"\'",
-                                icon: "system-restart",
-                            ),
-                        ],
-                    ),
-                ),
-            ),
-            key: "super_l",
-            modifier: "super",
-            filter_by: [],
-            hide_filtered: false,
-        ),
-        switch: (
-            modifier: "super",
-            filter_by: [],
-            switch_workspaces: true,
-        ),
-    ),
-)
