@@ -1,56 +1,0 @@
-:root {
-    --border-color: rgba(90, 90, 120, 0.4);
-    --border-color-active: rgba(239, 9, 239, 0.9);
-
-    --bg-color: rgba(20, 20, 20, 0.8);
-    --bg-color-hover: rgba(40, 40, 50, 1);
-
-    --border-radius: 12px;
-    --border-size: 3px;
-    --border-style: solid;
-
-    --text-color: rgba(245, 245, 245, 1);
-
-    --window-padding: 2px;
-}
-
-.window {
-}
-
-
-.monitor {
-}
-
-.workspace {
-}
-
-.client {
-}
-
-.client-image {
-}
-
-
-.launcher {
-}
-
-.launcher-input {
-}
-
-.launcher-results {
-}
-
-.launcher-item {
-}
-
-.launcher-exec {
-}
-
-.launcher-key {
-}
-
-.launcher-plugins {
-}
-
-.launcher-plugin {
-}
