@@ -1,0 +1,18 @@
+{
+    "pacman" : [
+        "libqalculate",
+        "aubio",
+        "cava",
+        "ttf-material-symbols-variable",
+        "ddcutil",
+        "app2unit",
+        "lm_sensors",
+        "swappy",
+        "ddcutil", 
+        "cmake",
+        "ninja"
+    ], 
+    "aur": [
+        "caelestia-cli" 
+    ]
+}
