@@ -1,0 +1,8 @@
+{
+    "pacman" : [
+        "qtile"
+    ],
+    "aur" : [
+        "qtile-extra"
+    ]
+}
